# RA2-Tech-Assignment

./: .gitignore  README.md
backend/: README.md  package-lock.json  package.json  server.ts  tsconfig.json
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend-rust/src/aggregation/: mod.rs  volume.rs
backend-rust/src/api/: handlers.rs  mod.rs
backend-rust/src/blockchain/: client.rs  mod.rs  types.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  app.css  index.css  main.tsx  wagmi.ts
frontend/src/api/: client.ts
frontend/src/components/: ChainSelector.tsx  TopSendersChart.tsx  VolumeChart.tsx
