[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Ethereum interaction
ethers = { version = "2.0", features = ["legacy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"
